# DeepLearning

./: .gitignore  LICENSE  pyproject.toml
1assign/: Markel.py  ander.py  config.py  main.py  models.py  utils.py
1assign/models/: best_model_(model2_20260325-1428).pth  best_model_(model2_20260325-1707).pth  best_model_(model2_20260325-1729).pth  best_model_(model4).pth  best_model_(model4_20260325-1507).pth  best_model_(model4_20260325-1622).pth  ep500_trial5000.pth  ep50_trials500.pth  epoch1000_trial3000.pth  epoch300_trial3000.pth  epoch300_trial5000.pth  name1.pth
1assign/runs/insurance/: events.out.tfevents.1774355867.SS23-5008AB7600.119995.0
2assign/: architectures.py  basicCNN.py  main.py  tranfer_learning.py  transferLEARN.py  utils.py
2assign/logs/: 50_Alex.logs
2assign/runs/AlexNet48/: events.out.tfevents.1777905083.tfg-1-ss.64108.2  events.out.tfevents.1777915990.tfg-1-ss.64495.2
2assign/runs/CNN/: events.out.tfevents.1777905081.tfg-1-ss.64108.1  events.out.tfevents.1777915890.tfg-1-ss.64495.1
3assign/: architechtures.py  conf_matr.py  config.py  llm_chain.py  main.py  optuna_results.txt  preprocess.py  utils.py  zero_shot.py
3assign/data/: tweet_emotions_X.csv  tweet_emotions_X_to_predict.csv  tweet_emotions_y.csv
3assign/results/: structured_llm.json  structured_llm_predictions.csv  zero_shot.json  zero_shot_predictions.csv
extrassign/ander/: config.py  img_viz.py  main.py  optim.py  schemas.py  vae_mnist.db
runs/insurance/: events.out.tfevents.1773749182.SS23-5008547600.21678.0  events.out.tfevents.1773749312.SS23-5008547600.22546.0
(+1494 files in other folders)
