[project]
name = "deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "optuna>=4.7.0",
    "optuna-dashboard>=0.20.0",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "pyqtwebengine>=5.15.7",
    "pywebview>=6.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.25.0",
]
